# pdfium-render-128-repro

./: .gitignore  package.json  tsconfig.json  vite.config.ts
my-crate/: Cargo.toml
my-crate/src/: lib.rs
pdfium/pkg/: package.json  pdfium.d.ts  pdfium.js  pdfium.js.diff
src/: App.vue  wasm-loader.ts
