[package]
name = "my-crate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
pdfium-render = { version = "0.8.17", features = ["thread_safe"]}
image = "^0"
js-sys = "^0"
log = "^0"
wasm-bindgen = "^0"
wasm-bindgen-futures = "^0"
web-sys = { version = "^0", features = ["ImageData"] }